--- a/taheoport.ini
+++ b/taheoport.ini
@@ -1,9 +1,9 @@
 taheoport_ini
-pathWorkDir=D:\MyJava\TaheoPort\examples
-idxFH=5
-idxFHor=4
-idxFAbs=3
-idxFOtn=1
+pathWorkDir=d:\MyJava\TaheoPort
+idxFH=0
+idxFHor=0
+idxFAbs=0
+idxFOtn=0
 prefixEX=86
 orientStation=0
 language=1
