--- a/taheoport.ini
+++ b/taheoport.ini
@@ -1,12 +1,12 @@
 taheoport_ini
-pathWorkDir=d:\MyJava\TaheoPort
-idxFH=0
-idxFHor=0
-idxFAbs=0
-idxFOtn=0
+pathWorkDir=D:\MyJava\TaheoPort\examples
+idxFH=5
+idxFHor=4
+idxFAbs=3
+idxFOtn=1
 prefixEX=86
 orientStation=0
-language=1
+language=0
 offsetDistanceType=0
 offsetDirectionType=0
 offsetTiltAngleType=0
