feat: change pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>taheoport.MainWin</mainClass>
+                            <mainClass>taheoport.Program</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
