--- a/taheoport.ini
+++ b/taheoport.ini
@@ -1,5 +1,5 @@
 taheoport_ini
-pathWorkDir=D:\MyJava\TaheoPort\examples
+pathWorkDir=/home/andrew/MyJava/Taheoport/examples
 idxFH=5
 idxFHor=4
 idxFAbs=3
@@ -8,5 +8,5 @@ prefixEX=86
 orientStation=0
 language=1
 offsetDistanceType=0
-offsetDirectionType=1
-offsetTiltAngleType=1
+offsetDirectionType=0
+offsetTiltAngleType=0
